[tool.poetry]
name = "kakaotalk-alarm"
version = "0.1.0"
description = ""
authors = ["songtov <songchiho777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.7"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
pytest-watcher = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.lint]
shell = "black . && isort . && ruff check ."

[tool.poe.tasks.test]
cmd = "pytest -v --cov=. --cov-report=term --cov-report=html:htmlcov"

[tool.poe.tasks.watch-test]
cmd = "ptw . --now --clear"

[tool.poe.tasks.time]
shell = """
    from datetime import datetime
    
    print(datetime.now())
    """
interpreter = "python"

[tool.poe.tasks.run]
help = "Run the main application"
script = "main:main"
envfile = ".env"
